--- a/sass/app.scss
+++ b/sass/app.scss
@@ -4,6 +4,19 @@
 // Comment out this import if you are customizing you imports below
 @import "foundation";
 
+
+$darkgray: #333;
+
+@mixin sans {
+	font-family: "museo-sans";
+	font-weight: 300;
+	color: $darkgray;
+}
+
+body, html {
+	@include sans;
+}
+
 // ----------------------------------------
 // Import specific parts of Foundation by commenting the import "foundation"
 // and uncommenting what you want below. You must uncomment the following if customizing
