--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -3,53 +3,74 @@ html, body {
   font-family: "museo-sans", sans-serif;
   height: 100%;
   color: #474747;
+  background: #cccccc;
 }
 
-/* line 18, ../sass/custom.scss */
+/* line 19, ../sass/custom.scss */
 h1, h2, h3 {
   font-family: "museo-sans", sans-serif;
   color: #474747;
 }
 
-/* line 23, ../sass/custom.scss */
+/* line 24, ../sass/custom.scss */
 h1, h2 {
-  font-weight: 700;
+  font-weight: 500;
 }
 
 /* line 28, ../sass/custom.scss */
+.centered {
+  text-align: center;
+}
+
+/* line 33, ../sass/custom.scss */
 .home {
   height: 70%;
 }
-/* line 32, ../sass/custom.scss */
-.home h1 {
-  margin-top: 40%;
-  letter-spacing: .02em;
-}
 /* line 37, ../sass/custom.scss */
+.home h1 {
+  margin-top: 50%;
+  padding-bottom: 10px;
+  letter-spacing: .02em;
+  font-family: "liberation-serif", serif;
+  border-bottom: 1px solid #474747;
+}
+/* line 45, ../sass/custom.scss */
 .home h2 {
-  font-size: 1.4em;
+  font-size: 18px;
   font-weight: 300;
 }
 
-/* line 43, ../sass/custom.scss */
+/* line 51, ../sass/custom.scss */
 .image {
   background: #cccccc;
   padding: 0;
 }
-
-/* line 48, ../sass/custom.scss */
-.project {
-  height: 20%;
-  overflow: hidden;
-  border: 1px solid #cccccc;
-  border-left: none;
-  border-right: none;
-}
 /* line 55, ../sass/custom.scss */
-.project h2 {
-  font-weight: 700;
+.image img {
+  width: 100%;
 }
-/* line 58, ../sass/custom.scss */
+
+/* line 60, ../sass/custom.scss */
+.project {
+  background: #fff;
+  border-top: 1px solid #474747;
+  border-bottom: 1px solid #474747;
+  overflow: hidden;
+  margin-bottom: 20px;
+}
+/* line 68, ../sass/custom.scss */
+.project h2 {
+  font-weight: 500;
+  font-family: "liberation-serif", serif;
+}
+/* line 72, ../sass/custom.scss */
 .project h2 span {
   font-weight: 300;
+  font-family: "museo-sans", sans-serif;
+}
+/* line 78, ../sass/custom.scss */
+.project h3 {
+  font-weight: 300;
+  font-size: 20px;
+  font-family: "museo-sans", sans-serif;
 }
