--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -51,6 +51,14 @@ h1, h2 {
 		font-weight: 300;
 		margin: 50px 0;
 	}
+
+	a.social {
+		opacity: .7;
+
+		&:hover {
+			opacity: 1;
+		}
+	}
 }
 
 .image {
