--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -25,8 +25,55 @@ h1, h2 {
 	font-weight: 500;
 }
 
+img {
+
+	&.photo {
+		width: 100%;
+		height: 80%;
+		background: #999;
+		margin: 50px 0;
+	}
+}
+
+.caption {
+	position: absolute;
+	width: 40%;
+	right: 0;
+	bottom: 150px;
+	padding: 10px;
+	background: rgba(0,0,0,.4);
+	color: #fff;
+
+	h3 {
+		font-size: 22px;
+		font-weight: 300;
+		color: #fff;
+	}
+
+	p {
+		color: $lightestgray;
+	}
+}
+
 .centered {
 	text-align: center;
+}
+
+.description {
+
+	h1 {
+		@include serif;
+		font-size: 50px;
+	}
+
+	h2 {
+		font-size: 24px;
+		font-weight: 300;
+	}
+
+	p {
+		font-size: 16px;
+	}
 }
 
 
@@ -34,7 +81,7 @@ h1, h2 {
 	height: 70%;
 
 	h1 {
-		margin-top: 20%;
+		margin-top: 10%;
 		padding-bottom: 10px;
 		letter-spacing: .02em;
 		@include serif;
@@ -58,6 +105,11 @@ h1, h2 {
 		&:hover {
 			opacity: 1;
 		}
+	}
+
+	&.interior {
+		height: auto;
+		margin-bottom: 50px;
 	}
 }
 
