--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -76,6 +76,18 @@ img {
 	}
 }
 
+.footer {
+	border-top: 1px solid $darkgray;
+	margin-top: 25px;
+	padding-top: 25px;
+	padding-bottom: 100px;
+
+	h4 {
+		@include serif;
+		font-weight: 300;
+	}
+}
+
 
 .home {
 	height: 70%;
