--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -66,11 +66,24 @@ img.photo {
   font-size: 16px;
 }
 
-/* line 80, ../sass/custom.scss */
+/* line 79, ../sass/custom.scss */
+.footer {
+  border-top: 1px solid #474747;
+  margin-top: 25px;
+  padding-top: 25px;
+  padding-bottom: 100px;
+}
+/* line 85, ../sass/custom.scss */
+.footer h4 {
+  font-family: "liberation-serif", serif;
+  font-weight: 300;
+}
+
+/* line 92, ../sass/custom.scss */
 .home {
   height: 70%;
 }
-/* line 83, ../sass/custom.scss */
+/* line 95, ../sass/custom.scss */
 .home h1 {
   margin-top: 10%;
   padding-bottom: 10px;
@@ -78,42 +91,42 @@ img.photo {
   font-family: "liberation-serif", serif;
   border-bottom: 1px solid #474747;
 }
-/* line 91, ../sass/custom.scss */
+/* line 103, ../sass/custom.scss */
 .home h2 {
   font-size: 18px;
   font-weight: 300;
 }
-/* line 96, ../sass/custom.scss */
+/* line 108, ../sass/custom.scss */
 .home h3 {
   font-size: 20px;
   font-weight: 300;
   margin: 50px 0;
 }
-/* line 102, ../sass/custom.scss */
+/* line 114, ../sass/custom.scss */
 .home a.social {
   opacity: .7;
 }
-/* line 105, ../sass/custom.scss */
+/* line 117, ../sass/custom.scss */
 .home a.social:hover {
   opacity: 1;
 }
-/* line 110, ../sass/custom.scss */
+/* line 122, ../sass/custom.scss */
 .home.interior {
   height: auto;
   margin-bottom: 50px;
 }
 
-/* line 116, ../sass/custom.scss */
+/* line 128, ../sass/custom.scss */
 .image {
   background: #e5e5e5;
   padding: 0;
 }
-/* line 120, ../sass/custom.scss */
+/* line 132, ../sass/custom.scss */
 .image img {
   width: 100%;
 }
 
-/* line 125, ../sass/custom.scss */
+/* line 137, ../sass/custom.scss */
 .project {
   background: #fff;
   border-top: 1px solid #474747;
@@ -121,17 +134,17 @@ img.photo {
   margin-bottom: 30px;
   overflow: hidden;
 }
-/* line 132, ../sass/custom.scss */
+/* line 144, ../sass/custom.scss */
 .project h2 {
   font-weight: 500;
   font-family: "liberation-serif", serif;
 }
-/* line 136, ../sass/custom.scss */
+/* line 148, ../sass/custom.scss */
 .project h2 span {
   font-weight: 300;
   font-family: "museo-sans", sans-serif;
 }
-/* line 142, ../sass/custom.scss */
+/* line 154, ../sass/custom.scss */
 .project h3 {
   font-weight: 300;
   font-size: 20px;
