--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -29,9 +29,11 @@ img {
 
 	&.photo {
 		width: 100%;
-		height: 80%;
+		height: 700px;
 		margin: 50px 0;
-		background: #999;
+		background: #fff;
+		padding: 10px;
+		box-shadow: 0 0 5px rgba(0,0,0,.1);
 	}
 }
 
