--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -20,12 +20,14 @@ h1, h2 {
 /* line 30, ../sass/custom.scss */
 img.photo {
   width: 100%;
-  height: 80%;
+  height: 700px;
   margin: 50px 0;
-  background: #999;
+  background: #fff;
+  padding: 10px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
 
-/* line 38, ../sass/custom.scss */
+/* line 40, ../sass/custom.scss */
 .caption {
   position: absolute;
   width: 40%;
@@ -35,55 +37,55 @@ img.photo {
   background: rgba(0, 0, 0, 0.4);
   color: #fff;
 }
-/* line 47, ../sass/custom.scss */
+/* line 49, ../sass/custom.scss */
 .caption h3 {
   font-size: 22px;
   font-weight: 300;
   color: #fff;
 }
-/* line 53, ../sass/custom.scss */
+/* line 55, ../sass/custom.scss */
 .caption p {
   color: #e5e5e5;
 }
 
-/* line 58, ../sass/custom.scss */
+/* line 60, ../sass/custom.scss */
 .centered {
   text-align: center;
 }
 
-/* line 64, ../sass/custom.scss */
+/* line 66, ../sass/custom.scss */
 .description h1 {
   font-family: "liberation-serif", serif;
   font-size: 50px;
 }
-/* line 69, ../sass/custom.scss */
+/* line 71, ../sass/custom.scss */
 .description h2 {
   font-size: 24px;
   font-weight: 300;
 }
-/* line 74, ../sass/custom.scss */
+/* line 76, ../sass/custom.scss */
 .description p {
   font-size: 16px;
 }
 
-/* line 79, ../sass/custom.scss */
+/* line 81, ../sass/custom.scss */
 .footer {
   border-top: 1px solid #474747;
   margin-top: 25px;
   padding-top: 25px;
   padding-bottom: 100px;
 }
-/* line 85, ../sass/custom.scss */
+/* line 87, ../sass/custom.scss */
 .footer h4 {
   font-family: "liberation-serif", serif;
   font-weight: 300;
 }
 
-/* line 92, ../sass/custom.scss */
+/* line 94, ../sass/custom.scss */
 .home {
   height: 70%;
 }
-/* line 95, ../sass/custom.scss */
+/* line 97, ../sass/custom.scss */
 .home h1 {
   margin-top: 10%;
   padding-bottom: 10px;
@@ -91,42 +93,42 @@ img.photo {
   font-family: "liberation-serif", serif;
   border-bottom: 1px solid #474747;
 }
-/* line 103, ../sass/custom.scss */
+/* line 105, ../sass/custom.scss */
 .home h2 {
   font-size: 18px;
   font-weight: 300;
 }
-/* line 108, ../sass/custom.scss */
+/* line 110, ../sass/custom.scss */
 .home h3 {
   font-size: 20px;
   font-weight: 300;
   margin: 50px 0;
 }
-/* line 114, ../sass/custom.scss */
+/* line 116, ../sass/custom.scss */
 .home a.social {
   opacity: .7;
 }
-/* line 117, ../sass/custom.scss */
+/* line 119, ../sass/custom.scss */
 .home a.social:hover {
   opacity: 1;
 }
-/* line 122, ../sass/custom.scss */
+/* line 124, ../sass/custom.scss */
 .home.interior {
   height: auto;
   margin-bottom: 50px;
 }
 
-/* line 128, ../sass/custom.scss */
+/* line 130, ../sass/custom.scss */
 .image {
   background: #e5e5e5;
   padding: 0;
 }
-/* line 132, ../sass/custom.scss */
+/* line 134, ../sass/custom.scss */
 .image img {
   width: 100%;
 }
 
-/* line 137, ../sass/custom.scss */
+/* line 139, ../sass/custom.scss */
 .project {
   background: #fff;
   border-top: 1px solid #474747;
@@ -134,17 +136,17 @@ img.photo {
   margin-bottom: 30px;
   overflow: hidden;
 }
-/* line 144, ../sass/custom.scss */
+/* line 146, ../sass/custom.scss */
 .project h2 {
   font-weight: 500;
   font-family: "liberation-serif", serif;
 }
-/* line 148, ../sass/custom.scss */
+/* line 150, ../sass/custom.scss */
 .project h2 span {
   font-weight: 300;
   font-family: "museo-sans", sans-serif;
 }
-/* line 154, ../sass/custom.scss */
+/* line 156, ../sass/custom.scss */
 .project h3 {
   font-weight: 300;
   font-size: 20px;
