--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1,4 +1,5 @@
 $darkgray: #474747;
+$medgray: #7a7a7a;
 $lightestgray: #e5e5e5;
 
 @mixin sans {
@@ -28,6 +29,7 @@ h1, h2 {
 img {
 
 	&.photo {
+		display: block;
 		width: 100%;
 		height: 700px;
 		margin: 50px 0;
@@ -40,15 +42,17 @@ img {
 .caption {
 	position: absolute;
 	width: 40%;
-	right: 0;
-	bottom: 150px;
-	padding: 10px;
-	background: rgba(0,0,0,.4);
+	right: 15px;
+	bottom: 50px;
+	padding: 20px;
+	background: rgba(0,0,0,.6);
 	color: #fff;
 
 	h3 {
-		font-size: 22px;
+		//@include serif;
+		font-size: 18px;
 		font-weight: 300;
+		letter-spacing: .05em;
 		color: #fff;
 	}
 
@@ -71,6 +75,13 @@ img {
 	h2 {
 		font-size: 24px;
 		font-weight: 300;
+		margin-bottom: 30px;
+	}
+
+	h3 {
+		font-weight: 300;
+		font-size: 22px;
+		color: $medgray;
 	}
 
 	p {
