--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -1,4 +1,4 @@
-/* line 12, ../sass/custom.scss */
+/* line 13, ../sass/custom.scss */
 html, body {
   font-family: "museo-sans", sans-serif;
   height: 100%;
@@ -6,19 +6,20 @@ html, body {
   background: #e5e5e5;
 }
 
-/* line 19, ../sass/custom.scss */
+/* line 20, ../sass/custom.scss */
 h1, h2, h3 {
   font-family: "museo-sans", sans-serif;
   color: #474747;
 }
 
-/* line 24, ../sass/custom.scss */
+/* line 25, ../sass/custom.scss */
 h1, h2 {
   font-weight: 500;
 }
 
-/* line 30, ../sass/custom.scss */
+/* line 31, ../sass/custom.scss */
 img.photo {
+  display: block;
   width: 100%;
   height: 700px;
   margin: 50px 0;
@@ -27,65 +28,73 @@ img.photo {
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
 
-/* line 40, ../sass/custom.scss */
+/* line 42, ../sass/custom.scss */
 .caption {
   position: absolute;
   width: 40%;
-  right: 0;
-  bottom: 150px;
-  padding: 10px;
-  background: rgba(0, 0, 0, 0.4);
+  right: 15px;
+  bottom: 50px;
+  padding: 20px;
+  background: rgba(0, 0, 0, 0.6);
   color: #fff;
 }
-/* line 49, ../sass/custom.scss */
+/* line 51, ../sass/custom.scss */
 .caption h3 {
-  font-size: 22px;
+  font-size: 18px;
   font-weight: 300;
+  letter-spacing: .05em;
   color: #fff;
 }
-/* line 55, ../sass/custom.scss */
+/* line 59, ../sass/custom.scss */
 .caption p {
   color: #e5e5e5;
 }
 
-/* line 60, ../sass/custom.scss */
+/* line 64, ../sass/custom.scss */
 .centered {
   text-align: center;
 }
 
-/* line 66, ../sass/custom.scss */
+/* line 70, ../sass/custom.scss */
 .description h1 {
   font-family: "liberation-serif", serif;
   font-size: 50px;
 }
-/* line 71, ../sass/custom.scss */
+/* line 75, ../sass/custom.scss */
 .description h2 {
   font-size: 24px;
   font-weight: 300;
+  margin-bottom: 30px;
 }
-/* line 76, ../sass/custom.scss */
+/* line 81, ../sass/custom.scss */
+.description h3 {
+  font-weight: 300;
+  font-size: 22px;
+  color: #7a7a7a;
+}
+/* line 87, ../sass/custom.scss */
 .description p {
   font-size: 16px;
 }
 
-/* line 81, ../sass/custom.scss */
+/* line 92, ../sass/custom.scss */
 .footer {
   border-top: 1px solid #474747;
   margin-top: 25px;
   padding-top: 25px;
   padding-bottom: 100px;
 }
-/* line 87, ../sass/custom.scss */
+/* line 98, ../sass/custom.scss */
 .footer h4 {
   font-family: "liberation-serif", serif;
   font-weight: 300;
 }
 
-/* line 94, ../sass/custom.scss */
+/* line 105, ../sass/custom.scss */
 .home {
   height: 70%;
 }
-/* line 97, ../sass/custom.scss */
+/* line 108, ../sass/custom.scss */
 .home h1 {
   margin-top: 10%;
   padding-bottom: 10px;
@@ -93,42 +102,42 @@ img.photo {
   font-family: "liberation-serif", serif;
   border-bottom: 1px solid #474747;
 }
-/* line 105, ../sass/custom.scss */
+/* line 116, ../sass/custom.scss */
 .home h2 {
   font-size: 18px;
   font-weight: 300;
 }
-/* line 110, ../sass/custom.scss */
+/* line 121, ../sass/custom.scss */
 .home h3 {
   font-size: 20px;
   font-weight: 300;
   margin: 50px 0;
 }
-/* line 116, ../sass/custom.scss */
+/* line 127, ../sass/custom.scss */
 .home a.social {
   opacity: .7;
 }
-/* line 119, ../sass/custom.scss */
+/* line 130, ../sass/custom.scss */
 .home a.social:hover {
   opacity: 1;
 }
-/* line 124, ../sass/custom.scss */
+/* line 135, ../sass/custom.scss */
 .home.interior {
   height: auto;
   margin-bottom: 50px;
 }
 
-/* line 130, ../sass/custom.scss */
+/* line 141, ../sass/custom.scss */
 .image {
   background: #e5e5e5;
   padding: 0;
 }
-/* line 134, ../sass/custom.scss */
+/* line 145, ../sass/custom.scss */
 .image img {
   width: 100%;
 }
 
-/* line 139, ../sass/custom.scss */
+/* line 150, ../sass/custom.scss */
 .project {
   background: #fff;
   border-top: 1px solid #474747;
@@ -136,17 +145,17 @@ img.photo {
   margin-bottom: 30px;
   overflow: hidden;
 }
-/* line 146, ../sass/custom.scss */
+/* line 157, ../sass/custom.scss */
 .project h2 {
   font-weight: 500;
   font-family: "liberation-serif", serif;
 }
-/* line 150, ../sass/custom.scss */
+/* line 161, ../sass/custom.scss */
 .project h2 span {
   font-weight: 300;
   font-family: "museo-sans", sans-serif;
 }
-/* line 156, ../sass/custom.scss */
+/* line 167, ../sass/custom.scss */
 .project h3 {
   font-weight: 300;
   font-size: 20px;
