--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -34,6 +34,11 @@ img.photo {
 }
 
 /* line 46, ../sass/custom.scss */
+p {
+  font-weight: 300;
+}
+
+/* line 50, ../sass/custom.scss */
 .caption {
   position: absolute;
   width: 40%;
@@ -43,63 +48,63 @@ img.photo {
   background: rgba(0, 0, 0, 0.6);
   color: #fff;
 }
-/* line 55, ../sass/custom.scss */
+/* line 59, ../sass/custom.scss */
 .caption h3 {
   font-size: 18px;
   font-weight: 300;
   letter-spacing: .05em;
   color: #fff;
 }
-/* line 63, ../sass/custom.scss */
+/* line 67, ../sass/custom.scss */
 .caption p {
   color: #e5e5e5;
 }
 
-/* line 68, ../sass/custom.scss */
+/* line 72, ../sass/custom.scss */
 .centered {
   text-align: center;
 }
 
-/* line 74, ../sass/custom.scss */
+/* line 78, ../sass/custom.scss */
 .description h1 {
   font-family: "liberation-serif", serif;
   font-size: 50px;
 }
-/* line 79, ../sass/custom.scss */
+/* line 83, ../sass/custom.scss */
 .description h2 {
   font-size: 24px;
   font-weight: 300;
   margin-bottom: 30px;
 }
-/* line 85, ../sass/custom.scss */
+/* line 89, ../sass/custom.scss */
 .description h3 {
   font-weight: 300;
   font-size: 22px;
   color: #7a7a7a;
 }
-/* line 91, ../sass/custom.scss */
+/* line 95, ../sass/custom.scss */
 .description p {
   font-size: 16px;
 }
 
-/* line 96, ../sass/custom.scss */
+/* line 100, ../sass/custom.scss */
 .footer {
   border-top: 1px solid #474747;
   margin-top: 25px;
   padding-top: 25px;
   padding-bottom: 100px;
 }
-/* line 102, ../sass/custom.scss */
+/* line 106, ../sass/custom.scss */
 .footer h4 {
   font-family: "liberation-serif", serif;
   font-weight: 300;
 }
 
-/* line 109, ../sass/custom.scss */
+/* line 113, ../sass/custom.scss */
 .home {
   height: 70%;
 }
-/* line 112, ../sass/custom.scss */
+/* line 116, ../sass/custom.scss */
 .home h1 {
   margin-top: 10%;
   padding-bottom: 10px;
@@ -107,42 +112,42 @@ img.photo {
   font-family: "liberation-serif", serif;
   border-bottom: 1px solid #474747;
 }
-/* line 120, ../sass/custom.scss */
+/* line 124, ../sass/custom.scss */
 .home h2 {
   font-size: 18px;
   font-weight: 300;
 }
-/* line 125, ../sass/custom.scss */
+/* line 129, ../sass/custom.scss */
 .home h3 {
   font-size: 20px;
   font-weight: 300;
   margin: 50px 0;
 }
-/* line 131, ../sass/custom.scss */
+/* line 135, ../sass/custom.scss */
 .home a.social {
   opacity: .7;
 }
-/* line 134, ../sass/custom.scss */
+/* line 138, ../sass/custom.scss */
 .home a.social:hover {
   opacity: 1;
 }
-/* line 139, ../sass/custom.scss */
+/* line 143, ../sass/custom.scss */
 .home.interior {
   height: auto;
   margin-bottom: 50px;
 }
 
-/* line 145, ../sass/custom.scss */
+/* line 149, ../sass/custom.scss */
 .image {
   background: #e5e5e5;
   padding: 0;
 }
-/* line 149, ../sass/custom.scss */
+/* line 153, ../sass/custom.scss */
 .image img {
   width: 100%;
 }
 
-/* line 154, ../sass/custom.scss */
+/* line 158, ../sass/custom.scss */
 .project {
   background: #fff;
   border-top: 1px solid #474747;
@@ -150,17 +155,17 @@ img.photo {
   margin-bottom: 30px;
   overflow: hidden;
 }
-/* line 161, ../sass/custom.scss */
+/* line 165, ../sass/custom.scss */
 .project h2 {
   font-weight: 500;
   font-family: "liberation-serif", serif;
 }
-/* line 165, ../sass/custom.scss */
+/* line 169, ../sass/custom.scss */
 .project h2 span {
   font-weight: 300;
   font-family: "museo-sans", sans-serif;
 }
-/* line 171, ../sass/custom.scss */
+/* line 175, ../sass/custom.scss */
 .project h3 {
   font-weight: 300;
   font-size: 20px;
