--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -156,6 +156,7 @@ p {
 }
 
 .project {
+	position: relative;
 	background: #fff; //#f2f2f2;
 	//border-top: 1px solid $darkgray;
 	//border-bottom: 1px solid $darkgray;
