--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -111,7 +111,8 @@ p {
 
 
 .home {
-	height: 60%;
+	height: auto; //60%;
+	margin-bottom: 50px;
 
 	h1 {
 		margin-top: 10%;
@@ -119,6 +120,14 @@ p {
 		letter-spacing: .02em;
 		@include serif;
 		border-bottom: 1px solid $darkgray;
+
+		a {
+			color: $darkgray;
+
+			&:hover {
+				color: $medgray;
+			}
+		}
 	}
 
 	h2 {
