--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -102,9 +102,10 @@ p {
 
 /* line 113, ../sass/custom.scss */
 .home {
-  height: 60%;
+  height: auto;
+  margin-bottom: 50px;
 }
-/* line 116, ../sass/custom.scss */
+/* line 117, ../sass/custom.scss */
 .home h1 {
   margin-top: 10%;
   padding-bottom: 10px;
@@ -113,41 +114,49 @@ p {
   border-bottom: 1px solid #474747;
 }
 /* line 124, ../sass/custom.scss */
+.home h1 a {
+  color: #474747;
+}
+/* line 127, ../sass/custom.scss */
+.home h1 a:hover {
+  color: #7a7a7a;
+}
+/* line 133, ../sass/custom.scss */
 .home h2 {
   font-size: 18px;
   font-weight: 300;
 }
-/* line 129, ../sass/custom.scss */
+/* line 138, ../sass/custom.scss */
 .home h3 {
   font-size: 20px;
   font-weight: 300;
   margin: 50px 0;
 }
-/* line 135, ../sass/custom.scss */
+/* line 144, ../sass/custom.scss */
 .home a.social {
   opacity: .7;
 }
-/* line 138, ../sass/custom.scss */
+/* line 147, ../sass/custom.scss */
 .home a.social:hover {
   opacity: 1;
 }
-/* line 143, ../sass/custom.scss */
+/* line 152, ../sass/custom.scss */
 .home.interior {
   height: auto;
   margin-bottom: 50px;
 }
 
-/* line 149, ../sass/custom.scss */
+/* line 158, ../sass/custom.scss */
 .image {
   background: #e5e5e5;
   padding: 0;
 }
-/* line 153, ../sass/custom.scss */
+/* line 162, ../sass/custom.scss */
 .image img {
   width: 100%;
 }
 
-/* line 158, ../sass/custom.scss */
+/* line 167, ../sass/custom.scss */
 .project {
   position: relative;
   background: #fff;
@@ -156,17 +165,17 @@ p {
   padding: 10px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
-/* line 169, ../sass/custom.scss */
+/* line 178, ../sass/custom.scss */
 .project h2 {
   font-weight: 500;
   font-family: "liberation-serif", serif;
 }
-/* line 173, ../sass/custom.scss */
+/* line 182, ../sass/custom.scss */
 .project h2 span {
   font-weight: 300;
   font-family: "museo-sans", sans-serif;
 }
-/* line 179, ../sass/custom.scss */
+/* line 188, ../sass/custom.scss */
 .project h3 {
   font-weight: 300;
   font-size: 18px;
