--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -136,9 +136,10 @@ p {
 	}
 
 	h3 {
-		font-size: 20px;
 		font-weight: 300;
 		margin: 50px 0;
+		@include serif;
+				font-size: 26px;
 	}
 
 	a.social {
